--- a/css/gengo.css
+++ b/css/gengo.css
@@ -466,13 +466,31 @@
 }
 
 .box {
-  padding-left: 36px;
-  padding-right: 36px;
+  padding-left: 12px;
+  padding-right: 12px;
   background-color: white;
   border: 1px solid #DBDBDB;
   border-radius: 3px;
   -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.075);
           box-shadow: 0 0 6px rgba(0, 0, 0, 0.075);
+}
+@media (min-width: 768px) {
+  .box {
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+}
+@media (min-width: 992px) {
+  .box {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
+}
+@media (min-width: 1200px) {
+  .box {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
 }
 
 .sidebar-nav {
